refactor: more functional style for the services